--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "myflix-client",
   "version": "1.0.0",
@@ -12,7 +13,6 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@parcel/transformer-sass": "^2.9.3",
-    "process": "^0.11.10"
+    "@parcel/transformer-sass": "^2.9.3"
   }
 }
