--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "myflix-client",
   "version": "1.0.0",
@@ -13,6 +12,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@parcel/transformer-sass": "^2.9.3"
+    "@parcel/transformer-sass": "^2.9.3",
+    "path-browserify": "^1.0.1"
   }
 }
