--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.9.3",
+    "parcel-bundler": "^1.8.1",
     "path-browserify": "^1.0.1"
   }
 }
