--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "parcel": "^2.9.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.9.3",
