--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "parcel index.html",
+    "build": "parcel build index.html",
+    "clean": "rm -rf .parcel-cache dist"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "parcel": "^2.9.3",
+    "@parcel/optimizer-htmlnano": "^2.9.3",
+    "htmlnano": "^2.0.4",
+    "parcel": "^2.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
