--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "@parcel/optimizer-htmlnano": "^2.9.3",
+    "bootstrap": "^5.3.2",
     "htmlnano": "^2.0.4",
     "parcel": "^2.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
