--- a/package.json
+++ b/package.json
@@ -12,17 +12,22 @@
   "license": "ISC",
   "dependencies": {
     "@parcel/optimizer-htmlnano": "^2.9.3",
+    "babel-runtime": "^6.26.0",
+    "babylon-walk": "^1.0.2",
     "bootstrap": "^5.3.2",
+    "core-js": "^3.33.0",
     "htmlnano": "^2.0.4",
     "parcel": "^2.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router": "^6.16.0",
+    "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.9.3",
-    "parcel-bundler": "^1.8.1",
+    "parcel-bundler": "^1.12.5",
     "path-browserify": "^1.0.1"
   }
 }
