--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/preset-env": "^7.15.8",
     "@parcel/optimizer-htmlnano": "^2.9.3",
     "babel-runtime": "^6.26.0",
     "babylon-walk": "^1.0.2",
     "bootstrap": "^5.3.2",
     "core-js": "^3.33.0",
     "htmlnano": "^2.0.4",
-    "parcel": "^2.0.0",
+    "parcel": "^1.12.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
