--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.10.0",
+    "eslint": "^8.51.0",
+    "eslint-plugin-react": "^7.33.2",
     "parcel": "^2.10.0",
     "path-browserify": "^1.0.1",
     "process": "^0.11.10"
