--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "source": "src/index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parcel --no-cache --open",
+    "start": "parcel index.html",
     "build": "parcel build",
     "clean": "rm -rf .parcel-cache dist"
   },
@@ -16,6 +16,7 @@
     "babel-runtime": "^6.26.0",
     "babylon-walk": "^1.0.2",
     "bootstrap": "^5.3.2",
+    "bundler": "^0.8.0",
     "core-js": "^3.33.0",
     "htmlnano": "^0.2.1",
     "prop-types": "^15.8.1",
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.10.0",
+    "buffer": "^6.0.3",
     "dependency-cruiser": "^14.1.2",
     "eslint": "^8.51.0",
     "eslint-plugin-react": "^7.33.2",
