--- a/package.json
+++ b/package.json
@@ -29,12 +29,13 @@
     "redux": "^4.2.1"
   },
   "devDependencies": {
-    "@parcel/transformer-sass": "^2.10.0",
+    "@parcel/transformer-sass": "^2.11.0",
     "buffer": "^6.0.3",
     "dependency-cruiser": "^14.1.2",
     "eslint": "^8.51.0",
     "eslint-plugin-react": "^7.33.2",
     "parcel": "^1.12.4",
+    "parcel-bundler": "^1.12.5",
     "path-browserify": "^1.0.1",
     "process": "^0.11.10"
   }
